--- a/.verb.md
+++ b/.verb.md
@@ -11,10 +11,10 @@ Now that ihpm is installed globally, run `ihpm` to use the CLI.
 If you want to take it for a test run, copy/paste this into the command line:
 
 ```bash
-ihpm todo.md "Create my own CLI!"
+ihpm test
 ```
 
-To add another task, just follow the same format: `ihpm [file] [task]`
+To add another task, just follow the same format: `ihpm [task]`
 
 Or, use these command line arguments:
 
